# Rofunc-ros

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
OptiLocation/: README.md
OptiLocation/config/: mocap.yaml
OptiLocation/launch/: mocap.launch  optitrack_client.launch  roport_optitrack_client.launch
OptiLocation/scripts/: optitrack_client.py
OptiLocation/src/: mocap_node.cpp
OptiLocation/src/natnet/: natnet_messages.cpp
Teleoperation/launch/: roport_xsens.launch
Teleoperation/src/core/: interface.py  server.py
VoiceQA/: README.md
VoiceQA/chat/config/: api_key.yaml
VoiceQA/chat/launch/: chat.launch  start.launch
VoiceQA/chat/scripts/: gpt3_node.py  str_pub.py
VoiceQA/launch/: voice_qa_en.launch
VoiceQA/scripts/: chatgpt2voice.py  voice2chatgpt.py
VoiceQA/speech2text/cfg/: params_cn.yaml
VoiceQA/speech2text/launch/: speech2text_cn.launch  speech2text_en.launch
VoiceQA/speech2text/scripts/: vosk_node.py
VoiceQA/text2speech/launch/: text2speech.launch
VoiceQA/text2speech/scripts/: polly_node.py  synthesizer_node.py  tts_node.py  voicer.py
VoiceQA/text2speech/src/tts/: synthesizer.py
VoiceQA/text2speech/test/: integration_tests.test  test_integration.py  test_unit_polly.py  test_unit_synthesizer.py
chat/config/: api_key.yaml  model.yaml
chat/launch/: chat.launch  start.launch
chat/scripts/: chatgpt_node.py  gpt3_node.py  str_pub.py
docs/: Installation.md
img/: voiceQA.pptx
scripts/: install_deps.sh
speech2text/launch/: ros_vosk_cn.launch  ros_vosk_en.launch  speech2text_cn.launch  speech2text_en.launch
speech2text/scripts/: tts_engine.py  vosk_node.py  vosk_ros_model_downloader.py
src/rofunc_ros/text2speech/: amazonpolly.py
src/rofunc_ros/utils/: color_palette.py  common.py  emergency_stop.py  json_encoder.py  mesh.py  message_converter.py  mjcf.py  robotics.py
text2speech/: .codecov.yml  .travis.yml  CONTRIBUTING.md  README.md
text2speech/action/: Speech.action
text2speech/launch/: text2speech.launch  tts_polly.launch
text2speech/scripts/: tts_node.py
text2speech/srv/: Polly.srv  Synthesizer.srv
text2speech/test/: test_unit_synthesizer.py
text2speech/tts/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
text2speech/tts/config/: sample_configuration.yaml
text2speech/tts/launch/: sample_application.launch
text2speech/tts/scripts/: synthesizer_node.py  voicer.py
text2speech/tts/src/tts/: amazonpolly.py  synthesizer.py
text2speech/tts/test/: test_integration.py  test_unit_polly.py
