<?xml version="1.0"?>
<package format="2">
  <name>rofunc_ros</name>
  <version>0.0.1</version>
  <description>Rofunc-ros: A Ros Package for Human-centered Intelligent Interactive Humanoid Robots</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jjliu@mae.cuhk.edu.hk">Junjia LIU</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-boto3</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>python-boto3</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>roscppactionlib_msgs</exec_depend>


  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python-mock</test_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
