<?xml version="1.0"?>
<package format="2">
  <name>tts</name>
  <version>1.0.2</version>
  <description>Package enabling a robot to speak with a human voice by providing a Text-To-Speech ROS service</description>
  <url>http://wiki.ros.org/tts</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python-boto3</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>rostest</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-boto3</exec_depend>
  <exec_depend>sound_play</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>python-mock</test_depend>
</package>
